# FlexNN

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Evaluation.md  LICENSE  README.md  sources.list
examples/: CMakeLists.txt  benchflexnn.cpp  benchmark_utils.h  flexnndemo.cpp  flexnnprofile.cpp  flexnnschedule.cpp  flexnnschedule.h  flexnnslice.cpp  flexnnslice.h  modelwriter.h  prng.h  randweights.cpp  transformutils.h  xyplane.h
scripts/device/: eval-ablation.sh  eval-adaption.sh  eval-end-to-end.sh  eval-overhead.sh  measure-energy.sh  measure-mem.sh  print-help.sh  run-flexnn.sh  run-gpt2.sh  run-one-ablation.sh  setup-files.sh
scripts/host/: adb-pull-all.sh  adb-push-all.sh  build-aarch64-linux-gnu.sh  build-android-aarch64.sh  sftp-pull-all.bat  sftp-pull-all.sh  sftp-push-all.bat  sftp-push-all.sh
scripts/plot/: ablation.py  adaption.py  end2end.py  overhead.py
src/: CMakeLists.txt  allocator.cpp  allocator.h  benchmark.cpp  blob.h  cpu.cpp  datareader.cpp  datareader.h  dummymat.cpp  dummymat.h  flexnn_utils.h  layer.cpp  layer.h  modelbin.cpp  modelbin.h  net.cpp  net.h  option.cpp  option.h  plannedallocator.cpp  plannedallocator.h  profiler.cpp  profiler.h
src/layer/: binaryop.cpp  binaryop.h  concat.cpp  concat.h  convolution.cpp  convolution.h  convolutiondepthwise.cpp  convolutiondepthwise.h  crop.cpp  crop.h  divtrilwhere.cpp  divtrilwhere.h  flatten.cpp  flatten.h  gather.cpp  gather.h  gemm.cpp  gemm.h  innerproduct.cpp  innerproduct.h  layernorm.cpp  layernorm.h  matmul.cpp  matmul.h  memorydata.cpp  memorydata.h  multiheadattention.cpp  multiheadattention.h  permute.cpp  permute.h  pooling.cpp  pooling.h  reshape.cpp  reshape.h  slice.cpp  slice.h  split.cpp  split.h
src/layer/arm/: concat_arm.cpp  convolution_arm.cpp  convolution_arm.h  convolution_im2col_gemm.h  convolutiondepthwise_arm.cpp  convolutiondepthwise_arm.h  gelu_arm.cpp  (+5 more)
